# YOLOv6

./: pyproject.toml  requirements.txt  setup.py  tutorial.ipynb
yolov6/core/: engine.py
