[project]
name = "yolov6"
version = "1.0.0"
dynamic = ["dependencies"]
description = "YOLOv6 object detection framework"

[tool.setuptools]
py-modules = ["yolov6", "yolov6.assigners", "yolov6.core", "yolov6.data", "yolov6.layers", "yolov6.models", "yolov6.models.heads", "yolov6.models.losses", "yolov6.solver", "yolov6.utils"] 
packages = ["yolov6", "yolov6.assigners", "yolov6.core", "yolov6.data", "yolov6.layers", "yolov6.models", "yolov6.models.heads", "yolov6.models.losses", "yolov6.solver", "yolov6.utils"] 

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
